# auto-connect-midi

./: .gitignore  README.md  auto-connect-midi  auto-connect-midi-config  auto-connect-midi.service  install-service.sh  on_connect.py  pyproject.toml
auto_connect_midi/: auto_connect_midi.py  on_connect.py
common/: config.py
config/: midi_config.py
